turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:10: error: not found: value tourne
    tourne(360/nbCotes)
    ^